cmake_minimum_required(VERSION 3.13)
project(ipc)

set(CMAKE_CXX_STANDARD 14)

add_executable(ipc
#        pipe_unname.cpp
#        pipe_name.cpp
#        pipe_name_antherprogress.cpp
#        signal.cpp
#        share_memory.cpp
#        share_memory_1.cpp
#        msgqueue.cpp
#        msgqueue_server.cpp
#        msgqueue_client.cpp
        mmap.cpp)